@@ -9,6 +9,7 @@ New features:
 - New sub-package ffmpeg that contains wrappers for the ffmpeg libraries
   (using ctypes. The ffmpeg libraries themselves are not included, they must
   already be on the system)
+- The viewer tool window is now resizable (patch 2977469).
 
 Bug fixes/enhancements:
 
